Major project structure overhaul and added initial tests.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,15 @@
-include README.rst
+graft docs
+graft src
+graft tests
+
+include *.in
+include *.ini
+include *.rst
+include *.txt
+
+include LICENSE
+include Makefile
+include conftest.py
+
+global-exclude __pycache__ *.py[cod]
+global-exclude *.so *.dylib
