--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,20 @@
 [bumpversion]
+# Release procedure
+# 1. <major|minor|patch> adds dev suffix
+# 2. <release> removes dev suffix.
 current_version = 0.2.0
 commit = True
-tag = True
+tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>dev)?
+serialize = 
+    {major}.{minor}.{patch}{release}
+    {major}.{minor}.{patch}
+
+[bumpversion:part:release]
+optional_value = placeholder
+values =
+    dev
+    placeholder
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
