--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,17 @@
 [bumpversion]
-# Release procedure
-# 1. <major|minor|patch> adds dev suffix
-# 2. <release> removes dev suffix.
-current_version = 0.2.0
+current_version = 0.3.0dev
 commit = True
 tag = False
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>dev)?
 serialize = 
-    {major}.{minor}.{patch}{release}
-    {major}.{minor}.{patch}
+	{major}.{minor}.{patch}{release}
+	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = placeholder
-values =
-    dev
-    placeholder
+values = 
+	dev
+	placeholder
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
@@ -32,31 +29,32 @@ exclude = docs, tests
 max-line-length = 120
 
 [pytest]
-norecursedirs =
-    .*
-    dist
-    build
-python_files =
-    test_*.py
-    *_test.py
-    tests.py
-ignore =
-    setup.py
-addopts =
-    -rxEfsw
+norecursedirs = 
+	.*
+	dist
+	build
+python_files = 
+	test_*.py
+	*_test.py
+	tests.py
+ignore = 
+	setup.py
+addopts = 
+	-rxEfsw
 
 [coverage:paths]
-source =
-    src
+source = 
+	src
 
 [coverage:run]
 branch = true
-source =
-    inline_requests
-    tests
+source = 
+	inline_requests
+	tests
 parallel = true
 
 [coverage:report]
 show_missing = true
 precision = 2
 omit = 
+
