--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,8 @@ envlist = py27, py34, py35, pypy
 
 [testenv]
 deps =
-    pytest
+    -rrequirements-setup.txt
+    -rrequirements-install.txt
+    -rrequirements-tests.txt
 commands =
-    {posargs:py.test}
-
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-;deps =
-;    -r{toxinidir}/requirements.txt
+    {posargs:coverage run -m py.test}
