--- a/.cookiecutterrc
+++ b/.cookiecutterrc
@@ -9,9 +9,11 @@ cookiecutter:
     project_short_description: A decorator for writing coroutine-like spider callbacks.
     project_slug: scrapy-inline-requests
     pypi_username: rolando
-    release_date: '2012-02-03'
+    use_codecov: y
     use_cython: n
+    use_landscape: y
     use_pypi_deployment_with_travis: n
     use_pytest: y
-    version: 0.3.1dev
+    use_requiresio: y
+    version: 0.3.1-dev
     year: 2012-2016
