--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ before_install:
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
-  - pip install -U tox twine
+  - pip install -U tox
+  - pip install -U coverage
   - virtualenv --version
   - easy_install --version
   - pip --version
@@ -30,7 +31,14 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
-  - tox -v
+  - tox
+
+after_success:
+    - |
+      # Codecov requires a single .coverage and will run 'coverage xml' to
+      # generate the report.
+      coverage combine
+      bash <(curl -s https://codecov.io/bash)
 
 after_failure:
   - more .tox/log/* | cat
