--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.3.1-dev
+current_version = 0.3.1
 commit = False
 tag = False
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>\w+))?
@@ -28,7 +28,7 @@ replace = version: {new_version}
 [bumpversion:file:HISTORY.rst]
 search = .. comment:: bumpversion marker
 replace = .. comment:: bumpversion marker
-
+	
 	{new_version} ({now:%Y-%m-%d})
 	------------------
 
